# benchmark_invprob_inference

./: .gitignore  README.rst  largescale_config_distributed.yml  objective.py  pyproject.toml
.github/workflows/: docs.yml  main.yml
analysis_plots/: batch_size_vs_throughput.py  dashboard.py  generate_dataset_previews.py  image_size_vs_gpu_memory.py  visualize_general_results.py  visualize_rank_details.py  visualize_scaling.py
benchmark_utils/: __init__.py  deepinv_imager.py  generate_radio_data.py  gpu_metrics.py  karabo_env_minimal.yml  karabo_utils.py  radio_utils.py  submit_job.py  support_3d.py  support_dataloader.py
configs/: config_parallel.yml  highres_imaging.yml  highres_imaging_torchrun.yml  radio_config.yaml  tomography_2d.yml  tomography_3d.yml  urban100.yml
datasets/: highres_color_image.py  radio_interferometry.py  simulated.py  tomography_2d.py  tomography_3d.py  urban100.py
docs/source/: API.rst  conf.py  index.rst  takeaways.rst
docs/source/_static/images/highres_color_image/: dashboard.html  dashboard_rank_details.html
docs/source/_static/images/scaling_highres_color_image/: dashboard_scaling.html
docs/source/_static/images/scaling_tomography_2d/: dashboard_scaling.html
docs/source/_static/images/scaling_tomography_3d/: dashboard_scaling.html
docs/source/_static/images/tomography_2d/: dashboard.html  dashboard_rank_details.html
docs/source/_static/images/tomography_3d/: dashboard.html  dashboard_rank_details.html
docs/source/api/: benchmark_utils.rst  datasets.rst  objective.rst  solvers.rst
docs/source/examples/: highres_example.rst  index.rst  tomography_2d.rst  tomography_3d.rst
docs/source/getting_started/: config_guide.rst  quickstart.rst
docs/source/takeaways/: convolution.rst  denoiser_scaling.rst  distributed_scaling.rst  gpu_memory_time_analysis.rst  index.rst
examples/: README.rst  demo_torchrun_cpu.py
install_scripts/: config_slurm.yaml  install_radio.sh  karabo.def  karabo_env_minimal.yml  submit_job.py
scripts/: generate_dataset_previews.py
solvers/: pgd.py  pnp.py
